Horizontal Scroll Fix

--- a/css/style.css
+++ b/css/style.css
@@ -763,7 +763,7 @@ a {
     }
     
     .vantagens {
-        width: 100%;
+        width: calc(100% - 120px);
         padding-left: 120px;
     }
 
